Remove mobile toggle menu and hamburger icon from navbar

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <header class="header">
         <a href="#home" class="logo">TechWorld</a>
 
-        <nav class="navbar" id="navbar">
+        <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
@@ -93,8 +93,6 @@
             <a href="#achievements">Achievements</a>
             <a href="#contact">Contact</a>
         </nav>
-
-        <i class="bx bx-menu" id="menu-icon"></i>
     </header>
 
     <!-- Home Section -->
