Add complete projects section to Index.cshtml matching index.html - includes all 14 projects + ORCHATHON 2K25

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                      height="220"
                      style="width:100%; height:220px; object-fit:cover; display:block;" />
                 <div class="project-card-body">
-                    <h4 class="project-card-title">TechWorld Portfolio (This Site)</h4>
+                    <h4 class="project-card-title"></h4>
                     <p class="project-desc">Static personal portfolio showcasing all major works and projects.</p>
                     <p class="project-meta"><strong class="tech-stack-label">Tech Stack:</strong> HTML5, CSS3, JavaScript, Bootstrap, BoxIcons</p>
                     <a href="https://github.com/wajiddaudtamboli/TechWorld_AI" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View TechWorld Portfolio Source">🔗</a>
